# vlc-plugins

./: CMakeLists.txt  INSTALL  Makefile.static  README  TODO  config.h.cmake  configure  histogram.c  vlc_keys.h
