CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( histogram )

SET( CMAKE_BUILD_TYPE "Release" )
OPTION( DEBUG_FUNCTIONS "Compile some helper debugging functions" FALSE )

FIND_PACKAGE( PNG )
IF(PNG_FOUND)
  SET( CONFIG_PNG_DEFINE "#define HAVE_PNG 1" )
ELSE()
  SET( CONFIG_PNG_DEFINE "/*#define HAVE_PNG 1*/" )
ENDIF()
IF(DEBUG_FUNCTIONS)
  SET( CONFIG_DEBUG "#define HISTOGRAM_DEBUG 1" )
ENDIF()

FIND_PACKAGE( PkgConfig REQUIRED )
PKG_CHECK_MODULES(VLC_PLUGIN REQUIRED vlc-plugin)
EXECUTE_PROCESS( COMMAND pkg-config --variable=pluginsdir vlc-plugin
                 COMMAND tr -d '\n'
                 OUTPUT_VARIABLE VLC_PLUGINS_DIR
)
EXECUTE_PROCESS( COMMAND pkg-config --cflags vlc-plugin
                 COMMAND tr -d '\n'
                 OUTPUT_VARIABLE VLC_PLUGIN_CPP_FLAGS
)
SET( HISTOGRAM_INSTALL_DIR "${VLC_PLUGINS_DIR}/video_filter" )

# vlc module preprocessor flags
SET( MODULE_CPPFLAGS
  "-DPIC -DMODULE_NAME=${CMAKE_PROJECT_NAME} -DMODULE_NAME_IS_${CMAKE_PROJECT_NAME} -DMODULE_STRING=\\\"${CMAKE_PROJECT_NAME}\\\" ${VLC_PLUGIN_CPP_FLAGS}"
)
# vlc module C flags
SET( MODULE_CFLAGS
  "-std=gnu99 -fPIC -Wall"
)
# vlc module additional optimization C flags
SET( MODULE_CFLAGS_OPTIMIZE
  "-pipe -fvisibility=hidden -ffast-math -funroll-loops -fomit-frame-pointer"
)

IF(CMAKE_BUILD_TYPE STREQUAL "Release")
  SET( MODULE_CFLAGS_ALL "${MODULE_CPPFLAGS} ${MODULE_CFLAGS} ${MODULE_CFLAGS_OPTIMIZE}" )
ELSE()
  SET( MODULE_CFLAGS_ALL "${MODULE_CPPFLAGS} ${MODULE_CFLAGS}" )
ENDIF()

INCLUDE_DIRECTORIES( ${VLC_PLUGIN_INCLUDE_DIRS} ${PNG_INCLUDE_DIRS} "." )
LINK_DIRECTORIES( ${VLC_PLUGIN_LIBRARY_DIRS} )

ADD_DEFINITIONS(${PNG_DEFINITIONS})

CONFIGURE_FILE(
  ${PROJECT_SOURCE_DIR}/config.h.cmake
  ${PROJECT_BINARY_DIR}/config.h
)

ADD_LIBRARY( histogram_plugin SHARED histogram.c )
SET_TARGET_PROPERTIES( histogram_plugin PROPERTIES COMPILE_FLAGS ${MODULE_CFLAGS_ALL} )
TARGET_LINK_LIBRARIES( histogram_plugin ${VLC_PLUGIN_LIBRARIES} ${PNG_LIBRARIES} "m" )

INSTALL( TARGETS histogram_plugin DESTINATION ${HISTOGRAM_INSTALL_DIR} )
